# bili-blocklist-sync

./: .gitignore  Cargo.toml  README.md  blocklist.json  config.json
src/: lib.rs  main.rs
src/model/: blocklist.rs  blocklist_response.rs  config.rs  mod.rs
